<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Innovate</string>
    <string name="app_signin">Innovate: Sign In</string>
    <string name="app_register">Innovate: Register</string>
    <string name="back">Back</string>
    
    
    <string name="action_settings">Settings</string>
    <string name="action_new_idea">New Idea</string>
    <string name="action_profile">Profile</string>
    <string name="action_signout">Sign Out</string>
    
    <string name="username">Username</string>
    <string name="login">Sign In</string>
    <string name="email">Email Address</string>
    
    <string name="msg_server_error">Error connecting to server</string>

    <string name="img_description">Idea Main Image</string>
    <string name="idea_title">Title of idea</string>
    <string name="last_updated">Updated</string>
    <string name="description">Idea Description</string>
    <string name="user_avatar">Author Avatar</string>
    
    <string name="blog_title">Title of the blog</string>
    
    <string name="right_arrow">Right Arrow</string>
    
    <string name="reward_title">Title of reward</string>
    <string name="reward_description">Reward Description</string>
    <string name="points_required">Points: 100</string>
    <string name="reward_redeem">Redeem</string>
    
    <string name="points_earned">Points Earned: 0</string>
    <string name="points_redeemed">Points Redeemed: 0</string>
    <string name="points_available">Points Available: 0</string>
    
</resources>
