<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivBlogImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/img_description"
        android:src="@drawable/photoholder" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/ivBlogImage"
        android:text="@string/username" />

    <TextView
        android:id="@+id/tvBlogDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ivBlogImage"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/tvLastUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivBlogImage"
        android:layout_alignLeft="@+id/tvUsername"
        android:text="@string/last_updated" />

    <ImageView
        android:id="@+id/ivUserAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvUsername"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/ic_action_person" />

</RelativeLayout>
