<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="za.co.zetail.innovate.MainActivity" >

    <item
        android:id="@+id/action_new_idea"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_new_idea"/>

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_action_person"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/action_profile"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
</menu>
