<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivRewardPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/photoholder" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivRewardPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/reward_description" />

    <TextView
        android:id="@+id/tvPointsReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/points_required" />

    <Button
        android:id="@+id/btRedeem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPointsReq"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/reward_redeem" />

    <Button
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btRedeem"
        android:layout_alignBottom="@+id/btRedeem"
        android:layout_alignParentRight="true"
        android:text="@string/back" />

</RelativeLayout>